<resources>
    <string name="app_name">Udacity News</string>
    <string name="resource_na">Not Available</string>
    <string name="category_heading">Category</string>
    <string name="author_heading">Author</string>
    <string name="date_heading">Date</string>
    <string name="dummy_headline_text">Headline</string>
    <string name="no_browser_found_message">No application can handle this request. Please install a webbrowser</string>
    <string name="server_down_message">Server is down. Please try a little later.</string>
    <string name="server_down_title">Technical Error</string>
    <string name="no_internet_message">It seems to be poor internet conectivity.</string>
    <string name="no_internet_title">No Internet Access</string>
    <string name="choose_category_title">Category Selection</string>
    <string name="choose_category_menu_item">Setting</string>
    <string name="category_selected_category_label">Selected Category</string>
    <string name="category_selected">All</string>
    <string name="category_selected_default">All</string>
    <string name="category_key">category_list</string>
    <string name="default_order_value">Newest</string>
    <array name="categories">
        <item>All</item>
        <item>Politics</item>
        <item>Sports</item>
        <item>Finance</item>
        <item>Education</item>
    </array>
</resources>
