<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/news_item_layout_padding">

            <TextView
                android:id="@+id/news_item_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="120"
                android:text="@string/dummy_headline_text"
                android:textSize="@dimen/news_heading_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:animateLayoutChanges="true"
                android:weightSum="3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_heading"
                    android:textSize="@dimen/news_category_size"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:padding="@dimen/marginal_padding"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/news_author_size"
                    android:text = "@string/author_heading"
                    android:layout_weight="1"
                    android:padding="@dimen/marginal_padding"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_heading"
                    android:layout_weight="1"
                    android:padding="@dimen/marginal_padding"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:animateLayoutChanges="true"
                android:weightSum="3">
                <TextView
                    android:id="@+id/news_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resource_na"
                    android:textSize="@dimen/news_category_size"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:padding="@dimen/marginal_padding"/>

                <TextView
                    android:id="@+id/news_item_Author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/news_author_size"
                    android:text = "@string/resource_na"
                    android:layout_weight="1"
                    android:padding="@dimen/marginal_padding"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/news_item_Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resource_na"
                    android:layout_weight="1"
                    android:padding="@dimen/marginal_padding"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>